Revert unsucessful attempt to output JSON of SO data

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -83,9 +83,7 @@ jobs:
           # Options
           user: cljoly
           template: classic
-          filename: stackoverflow-metrics.json
-          format: "json"
-
+          filename: stackoverflow-metrics.*
           base: ""
           config_display: large
           config_timezone: UTC
@@ -96,6 +94,7 @@ jobs:
           plugin_stackoverflow_lines: 0
           plugin_stackoverflow_sections: ""
           plugin_stackoverflow_user: 4253785
+          repositories_forks: yes
 
   misc-metrics:
     runs-on: ubuntu-latest
