Revert "Update metrics.yml"
This reverts commit 60ea2559bb5a26352219ec064990339a99e8f407.

This change actually made a header with github stats appear

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -57,7 +57,7 @@ jobs:
           filename: metrics-plugin-calendar-flat-full.*
           config_output: png
           token: ${{ secrets.METRICS_TOKEN }}
-          base_skip: true
+          base: ""
           plugin_calendar: yes
           plugin_calendar_limit: 2
 
