--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
           user: cljoly
@@ -28,7 +28,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: metrics-plugin-notable-indepth.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_notable: yes
           plugin_notable_indepth: no
@@ -36,7 +36,7 @@ jobs:
 
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           plugin_languages: yes
           plugin_languages_threshold: 2%
           plugin_languages_limit: 8
@@ -47,7 +47,7 @@ jobs:
         with:
           filename: metrics-plugin-calendar-flat-full.*
           config_output: svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_calendar: yes
           plugin_calendar_limit: 4
@@ -56,44 +56,7 @@ jobs:
         with:
           filename: metrics-plugin-calendar-flat-full.*
           config_output: png
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_calendar: yes
           plugin_calendar_limit: 2
-
-  stackoverflow-metrics:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: lowlighter/metrics@latest
-        with:
-          # Your GitHub token
-          token: ${{ secrets.METRICS_TOKEN }}
-
-          # Options
-          user: cljoly
-          template: classic
-          filename: stackoverflow-metrics.*
-          base: ""
-          config_display: large
-          config_timezone: UTC
-
-          plugin_stackoverflow: yes
-          plugin_stackoverflow_limit: 4
-          plugin_stackoverflow_lines_snippet: 0
-          plugin_stackoverflow_lines: 0
-          plugin_stackoverflow_sections: ""
-          plugin_stackoverflow_user: 4253785
-          repositories_forks: yes
-
-  misc-metrics:
-    runs-on: ubuntu-latest
-    steps:
-    - name: News from my blog
-      uses: lowlighter/metrics@latest
-      with:
-        filename: metrics-plugin-rss-myblog.svg
-        token: NOT_NEEDED
-        base: ""
-        plugin_rss: yes
-        plugin_rss_source: https://cj.rs/blog/index.xml
-        plugin_rss_limit: 4
